--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,27 @@
 alembic==1.13.1
+attrs==23.2.0
 blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-command-not-found==0.3
+# command-not-found==0.3
 cryptography==3.4.8
 cssbeautifier==1.15.1
 dbus-python==1.2.18
 distro==1.7.0
-distro-info==1.1+ubuntu0.2
+# distro-info==1.1+ubuntu0.2
 djlint==1.34.1
 dnspython==2.6.1
 EditorConfig==0.12.4
 elastic-transport==8.13.0
 elasticsearch==8.13.1
 email_validator==2.1.1
+exceptiongroup==1.2.1
 Flask==3.0.3
 Flask-Assets==2.1.0
 Flask-Login==0.6.3
+Flask-Mail==0.9.1
 Flask-Migrate==4.0.7
 Flask-Sijax==0.4.1
 Flask-SQLAlchemy==3.1.1
@@ -26,6 +29,7 @@ Flask-WTF==1.2.1
 forex-python==1.8
 future==1.0.0
 greenlet==3.0.3
+h11==0.14.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 httplib2==0.20.2
@@ -44,31 +48,43 @@ Mako==1.3.3
 MarkupSafe==2.1.5
 more-itertools==8.10.0
 netifaces==0.11.0
+nose==1.3.7
 oauthlib==3.2.0
+outcome==1.3.0.post0
+packaging==24.0
 pathspec==0.12.1
 PyGObject==3.42.1
 PyJWT==2.3.0
 pyparsing==2.4.7
-python-apt==2.4.0+ubuntu3
+pyproject==1.3.1
+PySocks==1.7.1
+# python-apt==2.4.0+ubuntu3
 python-dotenv==1.0.1
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
 SecretStorage==3.3.1
+selenium==4.21.0
 Sijax==0.3.2
 simplejson==3.19.2
 six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.29
-systemd-python==234
+# systemd-python==234
 tomli==2.0.1
 tqdm==4.66.2
+trio==0.25.1
+trio-websocket==0.11.1
 typing_extensions==4.11.0
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
+# ubuntu-advantage-tools==8001
+# ufw==0.36.1
+# unattended-upgrades==0.1
 urllib3==2.2.1
 wadllib==1.3.6
 webassets==2.0
+webdriver-manager==4.0.1
 Werkzeug==3.0.1
+wsproto==1.2.0
 WTForms==3.1.2
 zipp==1.0.0
